<resources>
    <string name="app_name">SimplePlayer</string>
    <string name="appbar_title_folder">폴더</string>
    <string name="appbar_title_recent">최근 동영상</string>
    <string name="appbar_title_playlist">재생목록</string>
    <string name="permission_message">동영상을 불러오려면 외부 저장소 읽기 권한이 필요합니다.</string>
    <string name="accept">수락</string>
    <string name="add">추가</string>
    <string name="modify">수정</string>
    <string name="finish">종료</string>
    <string name="cancel">취소</string>
    <string name="play">재생</string>
    <string name="pause">정지</string>
    <string name="edit_playlist_name">재생목록 이름을 지정하세요.</string>
    <string name="slash">/</string>
    <string name="empty_playlist">재생목록에 동영상을 추가해보세요.</string>
    <string name="empty_folderList">비디오 파일을 스마트폰에 넣어보세요.</string>
    <string name="empty_recentList">동영상 시청 시 추가됩니다.</string>
    <string name="empty_playlistList">재생목록을 추가해보세요.</string>
    <!-- more Btn 문자열 -->
    <string name="add_to_playlist">재생목록에 추가하기</string>
    <string name="video_delete_from_playlist">이 재생목록에서 삭제하기</string>
    <string name="video_delete_from_recentList">최근 기록에서 삭제하기</string>
    <string name="add_playlist">재생목록 추가</string>
    <string-array name="playlist_manage_more_btn_arr">
        <item>재생목록 이름 수정</item>
        <item>재생목록 삭제</item>
    </string-array>
    <!-- 설정 -->
    <string name="setting">설정</string>
    <string name="thema">테마</string>
    <string name="player">플레이어</string>
    <string name="player_controller_thema_key">playerControllerThemaKey</string>
    <string name="player_controller_thema">플레이어 컨트롤러 테마</string>
    <string name="button_base_controller">버튼 기반 컨트롤러</string>
    <string name="touch_base_controller">터치 기반 컨트롤러</string>
    <string name="button_controller_summary">버튼을 통해 되감기, 빨리 감기를 할 수 있습니다.</string>
    <string name="touch_controller_summary">더블 탭을 통해 되감기, 빨리 감기를 할 수 있습니다.</string>
    <string name="init_data">데이터 초기화</string>
    <string name="init_recent_video_list">최근 동영상 목록 초기화</string>
    <string name="init_playlist">재생 목록 초기화</string>
    <string name="init_recent_video_list_key">initRecentVideoKey</string>
    <string name="init_playlist_key">initPlaylistKey</string>
    <string name="init_recent_video_ask">최근 동영상 목록을 초기화하시겠습니까?</string>
    <string name="init_playlist_ask">재생 목록을 초기화하시겠습니까?</string>
    <string name="init">초기화</string>
    <string name="initSuccess">초기화 성공</string>
    <string name="information">정보</string>
    <string name="open_source_license">오픈소스 라이선스</string>
    <string name="show_open_source_licenses_key">showOpenSourceLicensesKey</string>
    <!-- Exception Message-->
    <string name="empty_video_exception">동영상을 찾을 수 없습니다.</string>
    <string name="fail_load_video_exception">동영상을 불러오는데 실패했습니다.</string>
    <string name="name_duplicate_exception">동일한 이름의 재생목록이 존재합니다.</string>
    <string name="blank_playlist_name_exception">이름을 입력해주세요.</string>
    <string name="title_activity_settings">SettingsActivity</string>
</resources>